styling/inset.css
/**
 * @author Bryan Haberger
 * https://habesoftware.rocks
 * Washington Universty - Saint Louis Fonts
 * https://marcomm.wustl.edu/resources/branding-logo-toolkit/fonts/
 * https://marcomm.wustl.edu/resources/branding-logo-toolkit/color-palettes/
 */

@import url(https://unpkg.com/chota@latest);

@font-face {
  font-family: "LB Regular";
  src: url('./washu-fonts/LibreBaskerville-Regular.otf');
  font-weight: regular;
}

@font-face {
  font-family: "LB Bold";
  src: url('./washu-fonts/LibreBaskerville-Bold.otf');
  font-weight: bold;
}

@font-face {
  font-family: "LB Italic";
  src: url('./washu-fonts/LibreBaskerville-Italic.otf');
  font-weight: italic;
}

@font-face {
  font-family: "SSP Regular";
  src: url('./washu-fonts/SourceSansPro-Regular.otf');
  font-weight: regular;
}

@font-face {
  font-family: "Rockwell Regular";
  src: url('./washu-fonts/SourceSansPro-Regular.otf');
  font-weight: regular;
}

:root {
  --color-primary: #173E3A;
  --color-lightGrey: #E3E3E2;
  --color-grey: #D6D6D6;
  --color-darkGrey: #707070;
  --grid-maxWidth: 100%;
  --grid-gutter: 2rem;
  --font-size: 1.2rem;
  --font-color: #707070;
  --font-family-sans: "LB Regular";
}

h1,
h2,
h3,
h4,
h5,
h6,
h7,
h8 {
  font-family: "LB Regular";
}

p {
  font-family: "LB Regular";
  font-size: 16pt;
}

ul {
  font-family: "LB Regular";
}

ol {
  font-family: "LB Regular";
}

li {
  font-family: "LB Regular";
}

label {
  font-family: "LB Regular";
}


#leafletInstanceContainer {
  height: 100%;
  width: 100%;
  background-image: url(../images/LogoNoText.png);
  background-size: auto 25%;
  background-position: center 11em;
  background-repeat: no-repeat;
  background-attachment: local;
  border: 2px solid black;
  z-index: 0;
}

#leafletInstanceContainer.has-loaded {
  background-size: 150em;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: local;
}

.leaflet-container {
  background-color: white;
}

#loadingMessage {
  text-align: center;
  background-color: darkgrey;
  color: black;
  padding: 2em 0em;
  font-size: 14pt;
  position: relative;
  z-index: 10;
  font-family: "LB Regular";
}

#infoContainer {
  border: 2px solid black;
  padding: 5px;
  z-index: 1;
}

.button.primary {
  color: #B85323;
  background: white;
  text-transform: uppercase;
  padding: 0.25em 0.5em;
  border-radius: unset;
  font-weight: bold;
}

#datelessView,
#instructions {
  border: 2px solid #B85323;
  font-size: 11pt;
  line-height: 12pt;
  /*   font-family: 'LB Regular'; */
}

.button.secondary {
  color: white;
  background: #2B8282;
  text-transform: uppercase;
  padding: 0.25em 0.5em;
  font-weight: bold;
}

.employeesLink {
  font-size: 90%;
}

.slider-container {
  position: absolute;
  text-align: center;
  color: white;
  background-color: #173E3A;
  z-index: 401;
  height: 95px;
  width: 100%;
}

.slider-container small {
  position: relative;
  top: -15px;
  display: block;
  text-align: center;
  font-size: 10pt;
  right: 28px;
}

.slider-controls h2 {
  margin: 0;
  padding-top: 0.25em;
  cursor: default;
  position: relative;
  top: 8px;
}

.info-scroller {
  max-height: 35em;
  overflow: auto;
}

.info-scroller ul {
  list-style-type: none;
}

.info-scroller ul h5 {
  color: #2B8282;
  margin: 0;
}

.info-extra {
  margin-bottom: 0.5em;
}

.year-inc {
  margin-left: 3em;
  cursor: pointer;
  transition: box-shadow 1.5s;
}

.year-inc:hover {
  box-shadow:
    2px 0px 16px 6px white,
    0px 0px 14px 4px white inset;

}

.year-dec {
  margin-right: 3em;
  cursor: pointer;
  transition: box-shadow 1.5s;
}

.year-dec:hover {
  box-shadow:
    2px 0px 16px 6px white,
    0px 0px 14px 4px white inset;
}

.leaflet-control-zoom {
  position: absolute;
  top: -10.5em;
  right: 0em;
}

.leaflet-control-zoom-in {
  color: white !important;
  background-color: #B85323 !important;
  cursor: pointer !important;
}

.leaflet-control-zoom-out {
  color: white !important;
  background-color: #B85323 !important;
  cursor: pointer !important;
}

.leaflet-control-zoom-out.leaflet-disabled {
  cursor: not-allowed !important;
}

.zoomNotice {
  /*   font-family: "LB Regular"; */
  font-weight: bold;
}

.zoomNotice span {
  cursor: default;
}

#currentCoords {
  font-weight: bold;
}

.tag {
  color: white;
}

.grouped {
  flex-flow: wrap;
}

.grouped div {
  display: inline-flex;
}

.grouped input {
  height: 1.5em;
  width: 8em !important;
}

.featureInfo {
  margin: 4px 0px;
  font-size: 8pt;
  border-bottom: 1px solid black;
  padding: 4px 0px;
}

.featureInfo label {
  margin-right: 6px;
  font-family: "Rockwell Regular";
}

.featureInfo img,
.leaflet-popup-content img {
  max-height: 270px;
}

input[type="checkbox"] {
  width: 2rem;
  height: 2rem;
}

/*.slider-container {
    font-family: "Roboto";
}*/

/*#timeSliderSpan {
    display: inline-block;
}*/

.is-not-visible {
  visibility: hidden;
  opacity: 0;
  z-index: 0;
}

.is-toggled-off {
  visibility: hidden;
  opacity: 0;
  z-index: 0;
}

.is-hidden {
  display: none;
}

path {
  -webkit-transition: visibility 1.5s, opacity 1.5s linear;
  -moz-transition: visibility 1.5s, opacity 1.5s linear;
  -o-transition: visibility 1.5s, opacity 1.5s linear;
  transition: visibility 1.5s, opacity 1.5s linear;
}

.leaflet-control-layers-base span,
.leaflet-control-layers-overlays span {
  font-size: 10pt;
}

.leaflet-control-layers {
  top: 85px;
}

.leaflet-control-layers-toggle {
  background-image: url(../images/layers.png);
  width: 55px !important;
  height: 55px !important;
  background-size: 55px;
}

.layersIcon {
  background-image: url(../images/layers.png);
  background-position: 2px;
  width: 44px;
  height: 44px;
  position: relative;
  display: inline-block;
  top: 18px;
  margin: 0px 5px;
}

.leaflet-retina .leaflet-control-layers-toggle {
  width: 55px !important;
  height: 55px !important;
  background-image: url(../images/layers.png);
  background-size: 55px;
}
/* ... */

